--- a/public/locales/fa.json
+++ b/public/locales/fa.json
@@ -19,6 +19,7 @@
     "startNewGame": "شروع بازی جدید",
     "challengeYourself": "خود را به چالش بکشید و با دیگران رقابت کنید",
     "selectLanguage": "انتخاب زبان",
+    "loading": "در حال بارگذاری...",
     "profile": {
       "guestUser": "کاربر مهمان",
       "level": "سطح مبتدی",
@@ -62,7 +63,25 @@
     "language": "زبان",
     "theme": "تم",
     "notifications": "اعلان‌ها",
+    "privacy": "حریم خصوصی",
     "about": "درباره"
+  },
+  "auth": {
+    "error": {
+      "signatureInvalid": "احراز هویت ناموفق",
+      "signatureInvalidDesc": "امضای احراز هویت نامعتبر است. لطفاً اپلیکیشن را از تلگرام مجدداً راه‌اندازی کنید.",
+      "authDateInvalid": "احراز هویت منقضی شده",
+      "authDateInvalidDesc": "تاریخ احراز هویت نامعتبر یا موجود نیست. لطفاً اپلیکیشن را مجدداً راه‌اندازی کنید.",
+      "expired": "جلسه منقضی شده",
+      "expiredDesc": "جلسه شما منقضی شده است. لطفاً اپلیکیشن را از تلگرام مجدداً راه‌اندازی کنید.",
+      "signatureMissing": "احراز هویت موجود نیست",
+      "signatureMissingDesc": "امضای احراز هویت موجود نیست. لطفاً اپلیکیشن را از تلگرام مجدداً راه‌اندازی کنید.",
+      "unknown": "خطای احراز هویت",
+      "unknownDesc": "خطای ناشناخته‌ای در احراز هویت رخ داده است. لطفاً دوباره تلاش کنید.",
+      "technicalDetails": "جزئیات فنی",
+      "retry": "تلاش مجدد",
+      "contactSupport": "اگر مشکل ادامه دارد، لطفاً با پشتیبانی تماس بگیرید."
+    }
   },
   "game": {
     "hoursAgo": "ساعت پیش",
